--- a/force-app/main/default/pages/Proforma_Invoice_pdf.page
+++ b/force-app/main/default/pages/Proforma_Invoice_pdf.page
@@ -4,7 +4,7 @@
         <style type="text/css">
            @page 
             {  
-                size:10.54in 13.50in; 
+                size:11.54in 13.50in; 
 				margin-top: 5.00cm;
 				page-break-after:always;
 				@top-center 
@@ -26,14 +26,19 @@
             } 
             div.footer 
             {                
-				padding: 5px;               
+            //padding: 5px;               
 				position: running(footer);    
             }
             @page 
             {
 				@bottom-center 
 				{
-					padding: 10px;
+					padding-top: 10px;
+					content: "This is a computer generated document signature is not required.";
+				}
+				@bottom-right 
+				{
+					padding-top: 10px;
 					content: "Page " counter(page) " of " counter(pages);
 				}
             }
@@ -43,6 +48,7 @@
             border-spacing: 0px;
             font-size:12px;
             font-family: Arial;
+            -fs-table-paginate: paginate; 	
             }
             
             td {
@@ -65,8 +71,8 @@
         </style> 
     </head>
     <apex:form >
+        
         <div class="header">
-            
             <table style="width:100%;border-collapse: collapse;">
                 <tr>
                     <td style="border:none;padding:0px;" width="20%" valign="top">
@@ -106,7 +112,7 @@
 						<td style="width: 100%; text-align: center;"><b>PROFORMA INVOICE</b></td>
 					</tr>
 				</table>
-				<table style="width:100%;border:2px solid black;">
+				<table style="width:100%;border:1px solid black;">
 					
 					<!--<tr>
 						<td style="border:none;" width="15%" valign="top">
@@ -437,7 +443,7 @@
 							<b><apex:outputText value=":" /></b>
 						</td>
 						<td style="border:none;border-top: 2px solid black;"  valign="top" colspan="2">
-							<apex:outputText value="{!Acc.name}" />
+							<apex:outputText value="{!Acc.Print_Name__c}" />
 						</td>
 						
 						<td style="border:none;border-top: 2px solid black;border-left: 2px solid black;"  valign="top" >
@@ -447,7 +453,7 @@
 							<b><apex:outputText value=":" /></b>
 						</td>
 						<td style="border:none;border-top: 2px solid black;"  valign="top" colspan="2">
-							<apex:outputText value="{!Opportunity__c.Shipping_Account__r.name}" />
+							<apex:outputText value="{!Opportunity__c.Shipping_Account__r.Print_Name__c}" />
 						</td>
 					</tr>
 					<tr>
@@ -574,7 +580,6 @@
 							<b><apex:outputText value="State Code :" /></b> 
 							<apex:outputText value="{!strBillingCode}" />
 						</td> 
-						
 						<td style="border:none;border-left: 2px solid black"  valign="top">
 							<b><apex:outputText value="State" /></b> 
 						</td>
@@ -589,7 +594,7 @@
 							<apex:outputText value="{!Opportunity__c.Shipping_Account__r.Shipping_State_Code__c}" />
 						</td> 
 					</tr>
-					<table style="width:100%;border:2px solid black;border-collapse: collapse;">
+					<table style="width:100%;border-collapse: collapse;">
 						<tr>
 							<th  width="2%" rowspan="2" style="text-align:center">
 								<apex:outputText value="S No." />
@@ -597,7 +602,7 @@
 							<th  width="5%" rowspan="2" style="text-align:center">
 								<apex:outputText value="Part No" />
 							</th>
-							<th  width="5%" rowspan="2" style="text-align:center">
+							<th  width="10%" rowspan="2" style="text-align:center">
 								<apex:outputText value="Description" />
 							</th>
 							<th  width="5%" rowspan="2" style="text-align:center">
@@ -609,19 +614,19 @@
 							<th  width="5%" rowspan="2" style="text-align:center">
 								<apex:outputText value="UOM" />
 							</th>
-							<th  width="5%" rowspan="2" style="text-align:center">
+							<th  width="6%" rowspan="2" style="text-align:center">
 								<apex:outputText value="Unit Rate (INR)" />
 							</th>
-							<th  width="5%" rowspan="2" style="text-align:center">
+							<th  width="6%" rowspan="2" style="text-align:center">
 								<apex:outputText value="Amount (INR)" />
 							</th>
-							<th  width="3%" rowspan="2" style="text-align:center">
+							<th  width="4%" rowspan="2" style="text-align:center">
 								<apex:outputText value="Disc %" />
 							</th>
-							<th width="10%" rowspan="2" colspan="2" style="text-align:center">
+							<th width="5%" rowspan="2" colspan="2" style="text-align:center">
 								<apex:outputText value="Disc Amt (INR)" />
 							</th>
-							<th width="5%" rowspan="2" colspan="2" style="text-align:center">
+							<th width="10%" rowspan="2" colspan="2" style="text-align:center">
 								<apex:outputText value="Taxable Value" />
 							</th>
 							<th  width="10%" colspan="2" style="text-align:center">
@@ -633,7 +638,7 @@
 							<th  width="10%" colspan="2" style="text-align:center">
 								<apex:outputText value="IGST" />
 							</th>
-							<th  width="5%" rowspan="2" style="text-align:center">
+							<th  width="10%" rowspan="2" style="text-align:center">
 								<apex:outputText value="Total (INR)" />
 							</th>
 						</tr>  
@@ -694,7 +699,7 @@
 							<td style="text-align:right"><apex:outputText value="{!totalAmount}" /></td>
 						</tr>
 						
-						<tr>
+						<!--<tr>
 							<td colspan="12"></td>
 							<td rowspan="1"></td>
 							<td colspan="2" rowspan="1" style="text-align:center"><b><apex:outputText value="CGST" /></b></td>
@@ -711,7 +716,8 @@
 							<td rowspan="1" style="text-align:center"><b>Amt(INR)</b></td>
 							<td rowspan="1" style="text-align:center"><b>Rate (%)</b></td>
 							<td rowspan="1" style="text-align:center"><b>Amt (INR)</b></td>
-						</tr>
+						</tr>-->
+
 						<apex:repeat value="{!lstCharges}" var="liCharge">
 							<tr>
 							   <td colspan="12"> <center><apex:outputText value="{!liCharge.Charges__r.Name}" /></center></td>
@@ -778,11 +784,11 @@
 							<td colspan="2" style="text-align:right;"> <apex:outputText value="{!totalAmountWithTCS}" rendered="{!If(Acc.TCS_Charges_Enable__c ==true,true,false)}"/></td>
 						</tr>
 						
-						<table style="width:100%;">
+						<table style="width:100%; margin-bottom:-50px">
 							
 							<tr>
 								<td style="width:40%;">
-									<br/><center><b>TERMS &amp; CONDITIONS</b></center><br/> 
+									<br/><center><b><apex:outputText value="Terms And Conditions" /></b></center><br/> 
 									<!--<p>1. Interest 24% per annum will be charged on accounts unpaid against presentation </p>
 									<p>2. Our responsibility ceases on delivery of materials to carriers.</p>
 									<p>3. Goods supplied to order will not be taken back.</p>
@@ -797,11 +803,10 @@
 								<td style="width:40%;" align="left">
 									<table style="width:100%;" border="0" >
 										<b><apex:outputText value="Certified that the particulars given above are true and correct." /></b><br/> 
-										<apex:outputText value="For " />&nbsp;<b><apex:outputText value="Powerparts Private Limited " /></b>
+										<apex:outputText value="For " /><b><apex:outputText value="Powerparts Private Limited " /></b>
 										<div style="margin-top:10%">
 											<apex:outputText value="Authorised Signatory" />
 											<apex:image id="theImage" url="{!sign}" width="100" height="50" alt="User Siganture"/>
-											
 										</div>
 									</table>
 								</td>
@@ -811,7 +816,7 @@
 					</table>
 				</table>
 				
-				<center><b>This is a computer generated document signature is not required.</b></center>
+				
 			</body>
 		</div>
     </apex:form>
